# remote-camera

./: .clang-format  CMakeLists.txt  README.md  draw.cpp  drawing.cpp  main.cpp  run.sh
client/: CMakeLists.txt
client/app/: CMakeLists.txt  main.cpp
client/lib/: CMakeLists.txt  FileSender.hpp  FileTransferer.hpp  VectorSender.hpp
consumer/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Camera.cpp  Camera.hpp  CommunicationStructs.hpp  Connector.hpp  Def.h  FileSender.hpp  FileTransferer.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  MemoryConsumer.cpp  MemoryConsumer.hpp  MemoryProducer.cpp  MemoryProducer.hpp  MovementDetection.cpp  MovementDetection.hpp  ObjectDetection.cpp  ObjectDetection.hpp  QueConnector.hpp  QueReciver.cpp  QueReciver.hpp  QueSender.hpp  SocketConnector.cpp
lib/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  MovementDetection.cpp  MovementDetection.hpp  ObjectDetection.hpp
lib/Communication/: CMakeLists.txt  CommunicationStructs.hpp
lib/Communication/Memory/: CMakeLists.txt  MemoryAllocator.cpp  MemoryAllocator.hpp  MemoryConsumer.cpp  MemoryConsumer.hpp  MemoryProducer.cpp  MemoryProducer.hpp
lib/Communication/Queue/: CMakeLists.txt  QueConnector.cpp  QueConnector.hpp  QueReceiver.cpp  QueReceiver.hpp  QueSender.cpp  QueSender.hpp
lib/FileLib/: CMakeLists.txt  Date.cpp  Date.hpp  FileDetector.cpp  FileDetector.hpp  FileSender.cpp  FileSender.hpp  FileTransferer.hpp  VectorSender.hpp
lib/Server/: CMakeLists.txt  DataSaver.hpp  FileReciver.cpp  FileReciver.hpp  ReciveServer.cpp  ReciveServer.hpp  Server.hpp
lib/Socket/: CMakeLists.txt  Connector.hpp  SocketConnector.cpp  SocketConnector.hpp
movementDetector/: CMakeLists.txt  main.cpp
pathCreator/: CMakeLists.txt  main.cpp
producer/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
server/app/: main.cpp
server/lib/: CMakeLists.txt  FileReciver.cpp  FileReciver.hpp  ReciveServer.cpp  ReciveServer.hpp  Server.hpp
