add_library(
    CommunicationLib
    CommunicationStructs.hpp
    MemoryAllocator.hpp
    MemoryAllocator.cpp
    MemoryConsumer.hpp
    MemoryConsumer.cpp
    MemoryProducer.hpp
    MemoryProducer.cpp
    QueConnector.hpp
    QueConnector.cpp
    QueReciver.hpp
    QueReciver.cpp
    QueSender.hpp
    QueSender.cpp
    ObjectDetection.cpp
    ObjectDetection.hpp
    MovementDetection.cpp
    MovementDetection.hpp
    Camera.cpp
    Camera.hpp
)